bar items changed

--- a/ShiYet/Base.lproj/Main.storyboard
+++ b/ShiYet/Base.lproj/Main.storyboard
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cbS-Ex-8SB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cbS-Ex-8SB">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--His Stat View Controller-->
         <scene sceneID="ero-ke-pd6">
             <objects>
                 <viewController id="3H8-rZ-uQs" customClass="HisStatViewController" customModule="ShiYet" customModuleProvider="target" sceneMemberID="viewController">
@@ -28,15 +26,15 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="C8f-Zv-2ZV"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.94333755970001221" green="0.78183469251834081" blue="0.66379894262592665" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="1lJ-UE-7dA"/>
+                    <tabBarItem key="tabBarItem" title="" image="poop (3)" selectedImage="poop" id="1lJ-UE-7dA"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gtN-vt-Ibu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-257" y="882"/>
+            <point key="canvasLocation" x="-1084" y="817"/>
         </scene>
-        <!--Item 2-->
+        <!--Calendar View Controller-->
         <scene sceneID="SMm-U0-W4c">
             <objects>
                 <viewController id="mBg-sl-yXc" customClass="CalendarViewController" customModule="ShiYet" customModuleProvider="target" sceneMemberID="viewController">
@@ -57,16 +55,16 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="cHt-sL-Dam"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.88803476664023884" green="1" blue="0.86757782802718031" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="Szg-6I-IMO"/>
+                    <tabBarItem key="tabBarItem" title="" image="calendar (2)" selectedImage="calendar" id="Szg-6I-IMO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zMs-Bd-m6S" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="8pd-dh-7fc" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="627" y="305"/>
+            <point key="canvasLocation" x="-262" y="817"/>
         </scene>
-        <!--Item 1-->
+        <!--Shit View Controller-->
         <scene sceneID="dXQ-QX-5Cn">
             <objects>
                 <viewController id="msM-xc-Orj" customClass="ShitViewController" customModule="ShiYet" customModuleProvider="target" sceneMemberID="viewController">
@@ -95,38 +93,41 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="FY1-EL-lRc"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.22215035108575387" green="0.99115253584742702" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="q5K-dn-wcy"/>
+                    <tabBarItem key="tabBarItem" title="" image="analytics" selectedImage="analysis" id="q5K-dn-wcy"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rIv-ir-5Zr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="daa-OL-V8T" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="624.63768115942037" y="-302.00892857142856"/>
+            <point key="canvasLocation" x="542" y="817"/>
         </scene>
         <!--FirstScreen-->
         <scene sceneID="TAU-Gn-yHL">
             <objects>
-                <tabBarController title="FirstScreen" id="cbS-Ex-8SB" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabBar" title="FirstScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="cbS-Ex-8SB" sceneMemberID="viewController">
                     <tabBar key="tabBar" tag="1" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8TS-ea-j3g">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="msM-xc-Orj" kind="relationship" relationship="viewControllers" id="n6l-os-wRz"/>
-                        <segue destination="mBg-sl-yXc" kind="relationship" relationship="viewControllers" id="fXG-aT-SEY"/>
                         <segue destination="3H8-rZ-uQs" kind="relationship" relationship="viewControllers" id="REV-HN-uOW"/>
+                        <segue destination="mBg-sl-yXc" kind="relationship" relationship="viewControllers" id="fXG-aT-SEY"/>
+                        <segue destination="msM-xc-Orj" kind="relationship" relationship="viewControllers" id="n6l-os-wRz"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UU1-FY-Nhj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-262" y="1"/>
+            <point key="canvasLocation" x="-262" y="56"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="analysis" width="32" height="32"/>
+        <image name="analytics" width="32" height="32"/>
+        <image name="calendar" width="32" height="32"/>
+        <image name="calendar (2)" width="32" height="32"/>
+        <image name="poop" width="32" height="32"/>
+        <image name="poop (3)" width="32" height="32"/>
     </resources>
 </document>
