--- a/ShiYet/Base.lproj/Main.storyboard
+++ b/ShiYet/Base.lproj/Main.storyboard
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cbS-Ex-8SB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cbS-Ex-8SB">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--His Stat View Controller-->
         <scene sceneID="ero-ke-pd6">
             <objects>
                 <viewController id="3H8-rZ-uQs" customClass="HisStatViewController" customModule="ShiYet" customModuleProvider="target" sceneMemberID="viewController">
@@ -30,13 +29,13 @@
                         <viewLayoutGuide key="safeArea" id="C8f-Zv-2ZV"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="1lJ-UE-7dA"/>
+                    <tabBarItem key="tabBarItem" title="" image="calendar (2)" selectedImage="calendar" id="1lJ-UE-7dA"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gtN-vt-Ibu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-257" y="882"/>
+            <point key="canvasLocation" x="-870" y="761"/>
         </scene>
-        <!--Item 2-->
+        <!--Calendar View Controller-->
         <scene sceneID="SMm-U0-W4c">
             <objects>
                 <viewController id="mBg-sl-yXc" customClass="CalendarViewController" customModule="ShiYet" customModuleProvider="target" sceneMemberID="viewController">
@@ -59,12 +58,12 @@
                         <viewLayoutGuide key="safeArea" id="cHt-sL-Dam"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="Szg-6I-IMO"/>
+                    <tabBarItem key="tabBarItem" title="" image="analytics" selectedImage="analysis" id="Szg-6I-IMO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zMs-Bd-m6S" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="8pd-dh-7fc" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="627" y="305"/>
+            <point key="canvasLocation" x="-152" y="761"/>
         </scene>
         <!--Item 1-->
         <scene sceneID="dXQ-QX-5Cn">
@@ -95,21 +94,21 @@
                         <viewLayoutGuide key="safeArea" id="FY1-EL-lRc"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="q5K-dn-wcy"/>
+                    <tabBarItem key="tabBarItem" title="Item 1" image="poop" selectedImage="poop (3)" id="q5K-dn-wcy"/>
                     <connections>
                         <outlet property="elapsedTimeLabel" destination="ypy-ok-f0g" id="MYN-qb-koy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rIv-ir-5Zr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="614" y="-392"/>
+            <point key="canvasLocation" x="543" y="761"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="bEe-qg-UFU">
             <objects>
                 <viewController id="c6e-dD-G1t" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tjE-lY-SAc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="886"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T3T-ee-5Y9">
@@ -130,7 +129,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pc4-fO-eYG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="KKy-II-GHu" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1430.4347826086957" y="-400.44642857142856"/>
+            <point key="canvasLocation" x="1423" y="761"/>
         </scene>
         <!--FirstScreen-->
         <scene sceneID="TAU-Gn-yHL">
@@ -149,10 +148,16 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UU1-FY-Nhj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-262" y="1"/>
+            <point key="canvasLocation" x="-152" y="0.0"/>
         </scene>
     </scenes>
     <resources>
+        <image name="analysis" width="32" height="32"/>
+        <image name="analytics" width="32" height="32"/>
+        <image name="calendar" width="32" height="32"/>
+        <image name="calendar (2)" width="32" height="32"/>
+        <image name="poop" width="32" height="32"/>
+        <image name="poop (3)" width="32" height="32"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
